terragrunt/issues/demo/3-example/0-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    # monitoring: prometheus
    istio-injection: enabled
