terragrunt/issues/demo/3-example/2-deployment-v2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: second-app-v2
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: second-app
      version: v2
  template:
    metadata:
      labels:
        app: second-app
        version: v2
        # istio: monitor
    spec:
      containers:
        - image: aputra/myapp-lesson155:latest
          imagePullPolicy: Always
          name: second-app
          ports:
            - name: http
              containerPort: 8080
