terragrunt/issues/demo/3-example/3-myapp-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: second-app
  namespace: production
  annotations:
    external-dns.alpha.kubernetes.io/hostname: test.travelersources.com
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: second-app
